[metadata]
name = pythontraining
version = 0.0.1
description = Demo of packaging python projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pythonsherpa/python-training
author = Joris Hoendervangers
author_email = "Joris Hoendervangers" <joris@pythonsherpa.com>
license = MIT
platforms = any

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.6
install_requires =


[options.packages.find]
where = src
exclude =
    test*